--- a/SpringBootFindProject/src/main/resources/templates/food/detail.html
+++ b/SpringBootFindProject/src/main/resources/templates/food/detail.html
@@ -30,19 +30,111 @@ p {
 <body>
   <div class="container">
     <div class="row">
-      <h3 class="text-center">맛집번호: ((fno))</h3>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td class="text-center" rowspan="8" width="30%">
+              <img th:src="${vo.poster}" style="width: 270px; height: 300px;">
+            </td>
+            <td colspan="2">
+              <h3>[[${vo.name}]]&nbsp;<span style="color: orange;">[[${vo.score}]]</span></h3>
+            </td>
+          </tr>
+          <tr>
+            <td width="15%" style="color: gray;">주소</td>
+            <td width="55%">[[${vo.address}]]</td>
+          </tr>
+          <tr>
+            <td width="15%" style="color: gray;">전화</td>
+            <td width="55%">[[${vo.phone}]]</td>
+          </tr>
+          <tr>
+            <td width="15%" style="color: gray;">음식종류</td>
+            <td width="55%">[[${vo.type}]]</td>
+          </tr>
+          <tr>
+            <td width="15%" style="color: gray;">영업시간</td>
+            <td width="55%">[[${vo.time}]]</td>
+          </tr>
+          <tr>
+            <td width="15%" style="color: gray;">가격대</td>
+            <td width="55%">[[${vo.price}]]</td>
+          </tr>
+          <tr>
+            <td width="15%" style="color: gray;">주차</td>
+            <td width="55%">[[${vo.parking}]]</td>
+          </tr>
+          <tr>
+            <td width="15%" style="color: gray;">테마</td>
+            <td width="55%">[[${vo.theme}]]</td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table">
+        <tr>
+          <td>[[${vo.content}]]</td>
+        </tr>
+        <tr>
+          <td class="text-right">
+            <button type="button" class="btn-sm btn-success" onclick="javascript:history.back()">목록</button>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div id="map" style="width:100%;height:350px;"></div>
+          </td>
+        </tr>
+      </table>
+	  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7f8e9c8a7025d5ade9b4112ba572b97b&libraries=services"></script>
+	  <script>
+	  var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+		 mapOption = {
+			  center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+		      level: 3 // 지도의 확대 레벨
+		 };  
+		
+	  // 지도를 생성합니다    
+	  var map = new kakao.maps.Map(mapContainer, mapOption); 
+		
+	  // 주소-좌표 변환 객체를 생성합니다
+  	  var geocoder = new kakao.maps.services.Geocoder();
+		
+	  // 주소로 좌표를 검색합니다
+	  geocoder.addressSearch('[[${vo.address}]]', function(result, status) {
+		
+		// 정상적으로 검색이 완료됐으면 
+		if (status === kakao.maps.services.Status.OK) {
+			
+			var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+		
+			// 결과값으로 받은 위치를 마커로 표시합니다
+			var marker = new kakao.maps.Marker({
+				map: map,
+				position: coords
+			});
+		
+			// 인포윈도우로 장소에 대한 설명을 표시합니다
+			var infowindow = new kakao.maps.InfoWindow({
+				content: '<div style="width:150px;text-align:center;padding:6px 0;">[[${vo.name}]]</div>'
+			});
+			infowindow.open(map, marker);
+		
+			// 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+			map.setCenter(coords);
+		} 
+	  });    
+	  </script>
     </div>
   </div>
   <script>
-    const detailApp = Vue.createApp({
+    /* const detailApp = Vue.createApp({
     	data() {
     		return {
-    			fno: '[[${fno}]]',
-    			detail: {}
+    			fno: '[[${fno}]]'
     		}
     	},
     	mounted() {
-    		this.dataRecv()
+    		//this.dataRecv()
     	},
     	methods: {
     		async dataRecv() {
@@ -57,7 +149,7 @@ p {
     	}
     })
     detailApp.config.compilerOptions.delimiters= ['((','))']
-    detailApp.mount(".container")
+    detailApp.mount(".container") */
   </script>
 </body>
 </html>
