부트_6일차 (96일차)

--- a/SpringBootIncludeProject/src/main/resources/templates/board/list.html
+++ b/SpringBootIncludeProject/src/main/resources/templates/board/list.html
@@ -36,7 +36,7 @@
         <tbody>
           <tr th:each="vo:${list}">
             <td class="text-center" width="10%">[[${vo.no}]]</td>
-            <td width="45%">[[${vo.subject}]]</td>
+            <td width="45%"><a th:href="@{/board/detail(no=${vo.no})}">[[${vo.subject}]]</a></td>
             <td class="text-center" width="15%">[[${vo.name}]]</td>
             <td class="text-center" width="20%">[[${vo.dbday}]]</td>
             <td class="text-center" width="10%" th:text="${vo.hit}"></td>
