--- a/SpringBootIncludeProject/src/main/resources/templates/board/insert.html
+++ b/SpringBootIncludeProject/src/main/resources/templates/board/insert.html
@@ -3,8 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style type="text/css">
+.row {
+	margin: 0px auto;
+	width: 800px;
+}
+</style>
 </head>
 <body>
-
+  <div class="container">
+    <div class="row">
+      <h3 class="text-center">글쓰기</h3>
+      <form method="post" action="/board/insert_ok">
+        <table class="table">
+          <tbody>
+            <tr>
+              <th width="15%" class="text-center">이름</th>
+              <td width="85%">
+                <input type="text" name="name" size="20" class="input-sm" required="required">
+              </td>
+            </tr>
+            <tr>
+              <th width="15%" class="text-center">제목</th>
+              <td width="85%">
+                <input type="text" name="subject" size="20" class="input-sm" required="required">
+              </td>
+            </tr>
+            <tr>
+              <th width="15%" class="text-center">내용</th>
+              <td width="85%">
+                <textarea rows="10" cols="60" name="content" required="required"></textarea>
+              </td>
+            </tr>
+            <tr>
+              <th width="15%" class="text-center">비밀번호</th>
+              <td width="85%">
+                <input type="password" name="pwd" size="10" class="input-sm" required="required">
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2" class="text-center">
+                <button type="submit" class="btn-sm btn-primary">글쓰기</button>
+                <button type="button" class="btn-sm btn-danger" onclick="javascript:history.back()">취소</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
