--- a/SpringBootIncludeProject/src/main/resources/templates/board/detail.html
+++ b/SpringBootIncludeProject/src/main/resources/templates/board/detail.html
@@ -39,8 +39,8 @@
           </tr>
           <tr>
             <td colspan="4" class="text-right">
-              <a href="#" class="btn btn-xs btn-info">수정</a>
-              <a href="#" class="btn btn-xs btn-warning">삭제</a>
+              <a th:href="@{/board/update(no=${vo.no})}" class="btn btn-xs btn-info">수정</a>
+              <a th:href="@{/board/delete(no=${vo.no})}" class="btn btn-xs btn-warning">삭제</a>
               <a href="/board/list" class="btn btn-xs btn-success">목록</a>
             </td>
           </tr>
